--- a/src/index.css
+++ b/src/index.css
@@ -110,7 +110,7 @@ body {
 
 .scroll {
   opacity: 0.3;
-  background-color: #fe5fdc;
+  background-color: lightgray;
   width: 40px;
   height: 40px;
   position: fixed;
@@ -119,6 +119,10 @@ body {
   border-radius: 5px;
   border: none;
   cursor:pointer;
+}
+
+.no-p-padding p {
+    margin: 0px !important;
 }
 
 .scroll:hover {
@@ -226,11 +230,11 @@ a img.aligncenter {
 }
 
 .gold {
-    background: gold;
+    background: radial-gradient(ellipse farthest-corner at right bottom,#fedb37 0,#fdb931 8%,#9f7928 30%,#8a6e2f 40%,transparent 80%),radial-gradient(ellipse farthest-corner at left top,#fff 0,#ffffac 8%,#d1b464 25%,#9f7928 62.5%,#5d4a1f 100%);
 }
 
 .silver {
-    background: silver;
+    background: radial-gradient(ellipse farthest-corner at right bottom,#fff 0,silver 8%,silver 30%,#fff 40%,transparent 80%),radial-gradient(ellipse farthest-corner at left top,#fff 0,silver 8%,silver 25%,silver 62.5%,silver 100%);
 }
 
 .whitesmoke {
